[FIX] sap.m.Input: Align read-only input border
JIRA: BGSOFUIRILA-4099

--- a/src/themelib_sap_fiori_3/src/sap/m/themes/sap_fiori_3_dark/InputBase.less
+++ b/src/themelib_sap_fiori_3/src/sap/m/themes/sap_fiori_3_dark/InputBase.less
@@ -79,8 +79,9 @@
 }
 
 .sapMInputBaseReadonlyWrapper {
-	background: var(--sapField_ReadOnly_Background);
 	border-color: var(--sapField_ReadOnly_BorderColor);
+	background: var(--sapField_ReadOnly_BackgroundStyle);
+	background-color: var(--sapField_ReadOnly_Background);
 }
 
 /* List specific styles */
